spacing between links on mobile, smaller navbar on mobile to avoid line breaking, removed blue links on some mobile devices (hopefully) and finishing touches

--- a/website/src/css/App.css
+++ b/website/src/css/App.css
@@ -44,6 +44,7 @@
   .landing-logo {
     flex-grow: 0;
     max-width: 90%;
+    max-height: 40%;
   }
 }
 
@@ -119,24 +120,24 @@
 }
 
 
-.App-schedule a {
+.App-schedule-link {
   text-decoration: none;
   font-weight: 450;
-}
-
-.App-schedule a:visited {
   color: white;
 }
 
+.App-schedule-link:visited {
+  color: white;
+}
 
 @media (hover: hover) {
-  .App-schedule a:hover {
+  .App-schedule-link:hover {
     color: #EE2A7B;
     font-weight: 510;
   }
 }
 
-.App-schedule a:active {
+.App-schedule-link:active {
   color: #EC5F99;
   font-weight: 510;
 }
@@ -205,11 +206,6 @@
   color: grey;
 }
 
-.disabled-link:hover {
-  color: grey;
-  fill: grey;
-}
-
 .event-info div {
   display: flex;
   flex-direction: column;
@@ -227,6 +223,13 @@
   margin: 0;
   font-size: 17px;
   text-decoration: underline;
+}
+
+@media (orientation: portrait) {
+
+  .event-info a + a {
+    margin-bottom: 10px;
+  }
 }
 
 .event-title  {
@@ -267,10 +270,6 @@
 .App-about p {
   font-size: 20px;
   padding: 0 5%;
-}
-
-.App-link {
-  color: white;
 }
 
 .name {
@@ -497,13 +496,17 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
 }
 
 .topnav{
-  flex: 1 1 100%;
-  flex-grow: 1;
-  padding: 16px 8px 8px 30px;
+  padding: 16px 0;
   display: inline-block;
   align-content: start;
   text-align: center;
   width: 100vw;
+}
+
+@media  (orientation: portrait){
+  .topnav{
+    text-align: center;
+  }
 }
 
 /* Style the buttons inside the navigation bar */
@@ -514,9 +517,10 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
   text-align: center;
   padding: 10px 16px;
   margin-left: 2px;
+  border-radius: 10px;
   margin-right: 2px;
   text-decoration: none;
-  font-family: Quicksand, Arial, sans-serif;;
+  font-family: Quicksand, Arial, sans-serif;
   font-size: 19px;
 }
 
@@ -525,11 +529,27 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
 @media (hover: hover) {
   .topnav button:hover {
     background-color: #EE2A7B;
-    border-radius: 10px;
   }
 }
 
-.topnav button:active {
-  background-color: #EE2A7B;
-  border-radius: 10px;
+@media (min-width: 375px) and (max-width: 405px) {
+
+  .topnav button {
+    padding: 10px 16px;
+    font-size: 17px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 375px) {
+  .topnav button {
+    padding: 10px 10px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 320px) {
+  .topnav button {
+    padding: 10px 5px;
+    font-size: 15px;
+  }
 }
